# mkdocs-gallery

./: LICENSE  README.md  pyproject.toml
src/mkdocs_gallery/: __init__.py
